v5/postman/collections/managing_collections.md
---
title: "Managing collections"
page_id: "managing_collections"
warning: false

---


From the **Collections** tab in the sidebar:

##### **Navigate through collections**

Click on a collection to show or hide the requests that comprise the collection. Use the up and down arrow keys on your keyboard to navigate through the collections. 

##### **Edit and view collection details**

Expand the right angle bracket (**>**) to show the details view for the collection. Collapse the left angle bracket (**<**) to hide the details view. You can add metadata like name and description so that all the information a developer needs to use your API is available easily. 

[![collection details view](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-collectionDetailsView.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-collectionDetailsView.png)

##### **Create a new collection**

Click the "new collection" icon on the top right, or [save a current request to a new collection](/docs/postman/collections/creating_collections/).

[![new collection icon](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154223.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154223.png)

##### **Reorder collections**

Collections can be sorted either alphabetically by name or by when they were last updated. To do this, select the "sort" icon on the top right and select `Sort by name` or `Sort by date`. 

[![sort collections](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154251.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154251.png)

##### **Favoriting a collection**

If you're working on a few collections in particular, you can click on the star icon to bring the collection(s) to the top of the list.

[![favorite a collection](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154198.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154198.png)

##### **Filter collections**

If you have a lot of collections, filter collections in the sidebar using the search input field.  

[![filter collections](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154104.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154104.png)

##### **Delete a collection**

Click the ellipsis (...)next to a collection, and select "Delete". If you didn't intend to delete the collection, you can click the **Undo** link in the notification that appears at the top of the Postman app.

[![confirmation message](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154076.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59154076.png)

##### **Share a collection** 

Learn more about [sharing collections](/docs/postman/collections/sharing_collections/).

### Other collection features

##### **Reorder requests**

Within a collection or folder, you can reorder requests using drag and drop. You can also reorder folders within a collection using drag and drop. 

##### **Save responses** 

Requests can also store [sample responses](/docs/postman/sending_api_requests/responses/) when saved in a collection.

##### **Use examples** 

With [examples](/docs/postman/collections/examples/), you can mock raw responses and save them to a collection. Then, you’ll be able to generate a mock endpoint for each of them using Postman’s [mock service](/docs/postman/mock_servers/intro_to_mock_servers/). 

##### **Add scripts**

Requests stored inside a collection can contain [scripts](/docs/postman/scripts/intro_to_scripts/) to add dynamic behavior to the collection.

### Adding folders

Folders are a way to organize your API endpoints within a collection into intuitive and logical groups to mirror your workflow. Next to the collection to which you want to add a folder, click on the ellipsis (...) and select "Add Folder".

[![add folder from dropdown](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-addFolderDropdown.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-addFolderDropdown.png)

Add a name and description to the folder. Folders are initially ordered alphabetically by name, and the folder name and description will be reflected in your API documentation.

[![add folder modal](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59183817.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/59183817.png)

You can add deeper levels of nesting for folders. Drag and drop the folders to reorder them to create the ultimate customized folder structure.

[![multi-level folders](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-multiLevelFolders.png)](https://s3.amazonaws.com/postman-static-getpostman-com/postman-docs/WS-multiLevelFolders.png)
